# has-dump1090

./: README.md  flake.nix  fourmolu.yaml  has-dump1090.cabal
app/: Main.hs
lib/: Aircraft.hs  ModeS.hs  Rtl.hs
lib/Aircraft/: CPR.hs
lib/ModeS/: Decoder.hs  Demodulator.hs  Types.hs  Verifier.hs
