cabal-version:   3.0
name:            has-dump1090
version:         0.1.0.0
synopsis:        Mode S message detector using RTL-SDR
license:         MIT
author:          Sean O'Mara
maintainer:      mseanomara@gmail.com

common shared-properties
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:    base
                    , rtlsdr
                    , bytestring
                    , vector
                    , time
                    , containers
    
library
    import:           shared-properties
    hs-source-dirs:   lib
    exposed-modules:  ModeS
                    , ModeS.Demodulator
                    , ModeS.Verifier
                    , ModeS.Decoder
                    , ModeS.Types
                    , Aircraft

executable has-dump1090
    import:           shared-properties
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    has-dump1090
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
