cabal-version:   3.0
name:            has-dump1090
version:         0.1.0.0
synopsis:        Mode S message detector using RTL-SDR
license:         MIT
author:          Sean O'Mara
maintainer:      mseanomara@gmail.com

common shared-properties
    default-language: GHC2021
    ghc-options:    -Werror -Wall

library
    import:           shared-properties
    hs-source-dirs:   lib
    exposed-modules:  ModeS
                    , ModeS.Demodulator
                    , ModeS.Verifier
                    , ModeS.Decoder
                    , ModeS.Types
                    , Aircraft
                    , Aircraft.CPR
                    , Rtl
    build-depends:    base
                    , bytestring
                    , vector
                    , time
                    , containers
                    , rtlsdr

executable has-dump1090
    import:           shared-properties
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    has-dump1090
                    , base
                    , bytestring
                    , containers
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
